Add user accounts with Devise

--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
+  <div class = "jumbotron">
+    <h2>Fantasy Golf is the most fun you and your friends have ever had playing fantasy sports</h2>
+    <h3>CLick below to create a league and add your friends today to get started!</h3>
+  </div>
 
-<h1>Listing Leagues</h1>
+
+<h1>Leagues</h1>
 
 <table class="table table-hover table-condensed">
   <thead>
