--- a/app/views/layouts/_bootstrap.html.erb
+++ b/app/views/layouts/_bootstrap.html.erb
@@ -6,3 +6,5 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+   <!-- Latest compiled and minified JQuery -->
+ <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
