--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<div class="row">
+	<div class="col-md-3">
 <p>
   <strong>Name:</strong>
   <%= @league.name %>
@@ -15,5 +17,7 @@
   <%= @league.commissioner %>
 </p>
 
+	</div>
+</div>
 <%= link_to 'Edit', edit_league_path(@league), class: "btn btn-link" %> |
 <%= link_to 'Back', leagues_path, class: "btn btn-link" %>
