--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @team %> |
-<%= link_to 'Back', teams_path %>
+<%= link_to 'Show', '#' %> |
+<%= link_to 'Back', '#' %>
