Set up links and routing for Teams

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -19,5 +19,6 @@
 
 	</div>
 </div>
+<%= link_to "Create your team", new_league_team_path(@league), class: "btn btn-primary" %>
 <%= link_to 'Edit', edit_league_path(@league), class: "btn btn-link" %> |
 <%= link_to 'Back', leagues_path, class: "btn btn-link" %>
