--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -23,7 +23,7 @@
     <%= f.label :commissioner %><br>
     <%= f.text_field :commissioner, class: "form-control" %>
   </div>
-  <div class="actions">
+  <div class="form-control">
     <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
