--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,11 @@
-<p>"Copyright Peter Vance"</p>
+<footer class="footer">
+<small>
+	Copyright Peter Vance
+</small>
+<nav>
+	<ul>
+		<li><%= link_to "About", '#' %></li>
+		<li><%= link_to "Contact", '#' %></li>
+	</ul>
+</nav>
+</footer>
