--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,20 +18,24 @@
         <li><%= link_to "About", pages_about_path %></li>
         <li><%= link_to "Contact", pages_contact_path %></li>
       </ul>
+      <!--
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+      -->
       <ul class="nav navbar-nav navbar-right">
+      
         <% if user_signed_in? %>
           <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-          <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-default" %></li>
         <% else %>
           <li><%= link_to "Sign up", new_user_registration_path %></li>
-          <li><%= link_to "Sign in", new_user_session_path %></li>
+          <li><%= link_to "Sign in", new_user_session_path, class: "btn btn-default" %></li>
         <% end %>
+    
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
