--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :name, class: "form-control" %>
   </div>
   <div class="form-group">
+    <%= f.label :category_id %><br>
+    <%= f.collection_select :category_id, Category.all, :id, :name, {prompt: "Choose a category"}, {class: "btn btn-default dropdown-toggle"} %>
+  </div>
+  <div class="form-group">
     <%= f.label :numMembers %><br>
     <%= f.number_field :numMembers, class: "form-control" %>
   </div>
